--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -18,7 +18,7 @@
   "hero": {
     "greeting": "Hi, I'm",
     "name": "Sławek",
-    "description": "I have been working in the IT industry for 25 years, gaining experience in various roles. Currently, I am passionately developing my skills in the field of ML/AI, aiming to create innovative and valuable solutions in this area."
+    "description": "I have been working in the IT industry for 25 years, gaining experience in various roles. Currently, I am passionately developing my skills in ML/AI, aiming to create new, interesting, and valuable solutions in this field."
   },
   "about": {
     "intro": "About Me",
