--- a/src/i18n/pl/translation.json
+++ b/src/i18n/pl/translation.json
@@ -18,7 +18,7 @@
   "hero": {
     "greeting": "Cześć, jestem",
     "name": "Sławek",
-    "description": "Od 25 lat działam w branży IT, zdobywając doświadczenie w różnych rolach. Obecnie z pasją rozwijam się w obszarze ML/AI, chcąc tworzyć innowacyjne i wartościowe rozwiązania w tym obszarze."
+    "description": "Od 25 lat działam w branży IT, zdobywając doświadczenie w różnych rolach. Obecnie z pasją rozwijam swoje kompetencje w obszarze ML/AI, chcąc tworzyć nowe, ciekawe i wartościowe rozwiązania w tej dziedzinie."
   },
   "about": {
     "intro": "O mnie",
